<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agregar Alumno"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_num_control"
            android:textColor="#BF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/agregar_num_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:digits="1234567890"
            android:imeOptions="actionNext"
            android:maxLength="8"
            android:textColor="#A6000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_nombre"
            android:textColor="#BF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/agregar_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPersonName"
            android:digits="qwertyuiopasdfghjklñzxcvbnm QWERTYUIOPASDFGHJKLÑZXCVBNM"
            android:imeOptions="actionNext"
            android:textColor="#A6000000"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_primer_ap"
            android:textColor="#BF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/agregar_primer_ap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPersonName"
            android:digits="qwertyuiopasdfghjklñzxcvbnm QWERTYUIOPASDFGHJKLÑZXCVBNM"
            android:imeOptions="actionNext"
            android:textColor="#A6000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_segundo_ap"
            android:textColor="#BF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/agregar_segundo_ap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:digits="qwertyuiopasdfghjklñzxcvbnm QWERTYUIOPASDFGHJKLÑZXCVBNM"
            android:imeOptions="actionNext"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="#A6000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_edad"
            android:textColor="#BF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/agregar_spinner_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:entries="@array/spinner_edad" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_semestre"
            android:textColor="#BF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/agregar_spinner_semestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:entries="@array/spinner_semestre" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_carrera"
            android:textColor="#BF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/agregar_spinner_carrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:entries="@array/spinner_carrera" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:onClick="agregar"
        android:text="@string/btn_agregar"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_cancelar_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:onClick="cancelar"
        android:text="@string/btn_cancelar"
        android:textSize="18sp" />

</LinearLayout>